# emoji-conv

./: Cargo.toml  Readme.md
src/: emoji_mappings.rs  lib.rs
